locust-k8s/locust-slave.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: locust-slave
spec:
  replicas: 10
  template:
    metadata:
      labels:
        name: locust
        role: slave
    spec:
      volumes:
      - name: locust-volume
        configMap:
          name: locust-configmap    
      containers:
        - name: locust
          image: karun/locust:v0.9.0
          volumeMounts:
          - name: locust-volume
            mountPath: /locust-tasks
