locust-k8s/slave-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    role: locust-slave
  name: locust-slave
spec:
  replicas: 2
  selector:
    matchLabels:
      role: locust-slave
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        role: locust-slave
    spec:
      containers:
      #- image: artifactory.internal.t-mobile.com:8504/artifactory/docker-prod-local/bulkupload/locust:v0.9
      - image: grubykarol/locust:0.8.1-py3.6
        imagePullPolicy: IfNotPresent
        name: locust-slave
        volumeMounts:
          - mountPath: /locust
            name: locust-scripts
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: locust-scripts
        configMap:
          name: scripts-cm
