locust-k8s/locust-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-master
  labels:
    name: locust
spec:
  type: LoadBalancer
  selector:
    name: locust
    role: master  
  ports:
    - port: 8089
      protocol: TCP
      name: master-web
    - port: 5557
      protocol: TCP
      name: master-port1
    - port: 5558
      protocol: TCP
      name: master-port2 
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: locust-master
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: locust
        role: master
    spec:
      volumes:
      - name: locust-volume
        configMap:
          name: locust-configmap
      containers:
        - name: locust
          image: karun/locust:v0.9.0
          volumeMounts:
          - name: locust-volume
            mountPath: /locust-tasks
          ports:
            - containerPort: 8089
            - containerPort: 5557
            - containerPort: 5558
