locust-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: locust-master
  name: locust-master
  namespace: locust-npe
spec:
  ports:
  - port: 5557
    name: communication
  - port: 5558
    name: communication-plus-1
  - port: 8089
    name: web-ui
    targetPort: 8089
    protocol: TCP 
  selector:
    role: locust-master
